--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Lato"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/index.css" />
     <title>The Tarantula Hawk</title>
   </head>
   <body>
@@ -25,5 +30,6 @@
         <li></li>
       </ul>
     </footer>
+    <script src="./scripts/scripts.js"></script>
   </body>
 </html>
