--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
     <header>
       <nav>
         <ul>
-          <li></li>
+          <li><a href="jordanwb.design">My Portfolio</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <div class="hero"></div>
+      <div class="hero"><h1>The Tarantula Hawk</h1></div>
       <div class="content">
-        <h1>The Tarantula Hawk</h1>
+        <h2>
+          The most painful sting of any insect
+        </h2>
+        <p>
+          It's been well documented that the tarantula hawk has the most painful
+          sting of any insect.
+        </p>
       </div>
     </main>
     <footer>
