--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="jordanwb.design">My Portfolio</a></li>
+          <li><a href="https://jordanwb.design">My Portfolio</a></li>
         </ul>
       </nav>
     </header>
